--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
+    "start": "webpack-dev-server --open --mode development --port 3000",
     "build": "webpack --mode production"
   },
   "devDependencies": {
@@ -25,7 +25,7 @@
     "css-loader": "^6.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "unico-webframe": "^3.5.2",
+    "unico-webframe": "3.6.0",
     "util": "^0.12.4",
     "webpack-dev-server": "^4.9.3"
   },
